--- a/package.json
+++ b/package.json
@@ -1,108 +1,26 @@
 {
-  "name": "dnit",
+  "name": "xp-ribbons",
   "version": "0.0.0",
   "description": "",
-  "main": "dnit.js",
+  "main": "src/index.js",
   "scripts": {
-    "init": "npm update --save && jspm init --yes && jspm update && npm start",
-    "install": "jspm install",
-    "start": "browser-sync start --files \"src\" --server --no-notify --no-ghost-mode --startPath \"?dev\"",
-    "build": "jspm bundle src/index.js build/index.js",
-    "release": "jspm bundle src/index.js build/index.js --minify",
+    "start": "browser-sync start --files \"src\" --server --https --no-notify --no-ghost-mode --startPath \"?dev\"",
+    "build": "node build.js",
+    "release": "npm run build && babili build/index.js -o build/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Damien Mortini",
   "license": "MIT",
   "dependencies": {
-    "browser-sync": "^2.14.0",
-    "jspm": "^0.17.0-beta.27"
+    "@webcomponents/custom-elements": "^1.0.0",
+    "dlib": "0.0.30",
+    "systemjs": "^0.20.13",
+    "systemjs-plugin-babel": "0.0.21",
+    "three": "^0.85.2"
   },
-  "jspm": {
-    "dependencies": {
-      "dlib": "npm:dlib@0.0.11",
-      "text": "github:systemjs/plugin-text@^0.0.8",
-      "three": "npm:three@^0.78.0",
-      "webcomponents.js": "npm:webcomponents.js@^0.7.22"
-    },
-    "devDependencies": {
-      "babel": "npm:babel-core@^5.8.24",
-      "babel-runtime": "npm:babel-runtime@^5.8.24",
-      "core-js": "npm:core-js@^1.1.4",
-      "plugin-babel": "npm:systemjs-plugin-babel@^0.0.10"
-    },
-    "peerDependencies": {
-      "assert": "github:jspm/nodelibs-assert@^0.2.0-alpha",
-      "buffer": "github:jspm/nodelibs-buffer@^0.2.0-alpha",
-      "child_process": "github:jspm/nodelibs-child_process@^0.2.0-alpha",
-      "constants": "github:jspm/nodelibs-constants@^0.2.0-alpha",
-      "crypto": "github:jspm/nodelibs-crypto@^0.2.0-alpha",
-      "events": "github:jspm/nodelibs-events@^0.2.0-alpha",
-      "fs": "github:jspm/nodelibs-fs@^0.2.0-alpha",
-      "os": "github:jspm/nodelibs-os@^0.2.0-alpha",
-      "path": "github:jspm/nodelibs-path@^0.2.0-alpha",
-      "process": "github:jspm/nodelibs-process@^0.2.0-alpha",
-      "stream": "github:jspm/nodelibs-stream@^0.2.0-alpha",
-      "string_decoder": "github:jspm/nodelibs-string_decoder@^0.2.0-alpha",
-      "util": "github:jspm/nodelibs-util@^0.2.0-alpha",
-      "vm": "github:jspm/nodelibs-vm@^0.2.0-alpha"
-    },
-    "overrides": {
-      "npm:babel-core@5.8.38": {
-        "main": "browser.js",
-        "dependencies": {},
-        "jspmNodeConversion": false,
-        "map": {
-          "regenerator/runtime": "babel-runtime/regenerator/runtime"
-        },
-        "meta": {
-          "browser.js": {
-            "exports": "babel",
-            "format": "global"
-          }
-        }
-      },
-      "npm:babel-runtime@5.8.38": {
-        "main": false,
-        "dependencies": {},
-        "optionalDependencies": {
-          "core-js": "^1.2.0"
-        }
-      },
-      "npm:inherits@2.0.1": {
-        "ignore": [
-          "test.js"
-        ]
-      },
-      "npm:readable-stream@1.0.34": {
-        "map": {
-          "stream": "stream-browserify/index"
-        },
-        "systemjs": {
-          "main": "readable.js"
-        },
-        "dependencies": {
-          "core-util-is": "~1.0.0",
-          "isarray": "0.0.1",
-          "string_decoder": "~0.10.0",
-          "inherits": "~2.0.1",
-          "stream-browserify": "~1.0.0"
-        }
-      },
-      "npm:readable-stream@1.1.14": {
-        "map": {
-          "stream": "stream-browserify/index"
-        },
-        "systemjs": {
-          "main": "readable.js"
-        },
-        "dependencies": {
-          "core-util-is": "~1.0.0",
-          "isarray": "0.0.1",
-          "string_decoder": "~0.10.0",
-          "inherits": "~2.0.1",
-          "stream-browserify": "~1.0.0"
-        }
-      }
-    }
+  "devDependencies": {
+    "babili": "^0.1.2",
+    "browser-sync": "^2.18.12",
+    "systemjs-builder": "^0.16.6"
   }
 }
